# iot-central

./: .gitignore  Cargo.toml  README.md  deploy.sh
.cargo/: config
go/: deploy.sh  go.mod  go.sum  main.go
go/adafruitio/: sender.go
go/cmd/finance/: main.go
go/cmd/sensors/: main.go
go/cmd/weather/: main.go
go/finance/: finnhub.go
go/sensors/: bme280.go
go/weather/: weather.go
python/: adafruit.py  main.py  weather.py
rust/: Cargo.toml  deploy.sh
rust-async/: Cargo.toml
rust-async/src/: adafruit.rs  finance.rs  main.rs
rust/src/: conversion.rs  finance.rs  main.rs
rust/src/sensor/: mod.rs  tsl.rs
src/: adafruit.rs  conversion.rs  finance.rs  main.rs  sensor.rs  weather.rs
src/sensor/: bme.rs  mod.rs  sgp.rs  tsl.rs
systemd/: SETUP.md  env.txt  iot-central-finance.service  iot-central-weather.service  iot-central.service
