[package]
name = "iot-central"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.2.3"
env_logger = "0.9.1"
log = "0.4.17"

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["json", "rustls-tls", "blocking", "multipart"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]
