[package]
name = "iot-central"
version = "0.1.0"
edition = "2021"

[features]
default = ["ftdi"]
ftdi = ["dep:ftdi-embedded-hal", "dep:ftdi"]
rpi = ["dep:linux-embedded-hal"]

[dependencies]
ctrlc = "3.2.3"
env_logger = "0.9.1"
log = "0.4.17"
sgp30 = "0.3.1"
bme280 = "0.2.1"
tsl2591 = "0.2.0"
shared-bus = "0.2.4"
embedded-hal = "0.2.7"
async-channel = "1.8.0"
smol = "1.3.0"

[dependencies.ftdi]
version = "0.1.3"
optional = true

[dependencies.ftdi-embedded-hal]
version = "0.13.0"
optional = true

[dependencies.linux-embedded-hal]
version = "0.3.2"
optional = true

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["json", "rustls-tls", "blocking", "multipart"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]
